# five-bit-counter

./: CMakeLists.txt  README.md  counter.c  counter.h
